--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,19 @@ code {
 .dropd {
   /* flex-grow: 1; */
   max-width: 400px;
+  display: block !important;
+}
+.dropd-list {
+  display: none !important;
+  position: absolute !important;
+  height: 200px !important;
+  /* background-color: rgba(255, 255, 255, 0.386) !important;
+  backdrop-filter: blur(20px); */
+  color: white !important;
+}
+.dropd-list.open {
+  display: block !important;
+  top: 35px !important;
 }
 .dropd-toggle {
   padding: 10px !important;
